$Rev$
[2007/09/09]
pyflakes SyntaxCheck.py
                    Update to svn version

[2007/09/08]
Entry.py            Rewrite the code with meide module

[2007/09/06]
DirBrowser.py       Fix refresh bug

[2007/09/02]
EditorFactory.py Editor.py
                    Fix open un-exists file will popup two message dialog bug
DirBrowser.py       Fix adding empty directory error
                    
[2007/09/01]
DirBrowser.py 
                    Fix adding empty directory error
                    
[2007/08/29]
ScriptDialog.py ShellDialog.py mScript.py mShell.py
                    Add script and shell key binding. Change shell to external tool
ShellWindow.py      Add Alt+Enter implement the same functionality of Ctrl+Enter
                    
[2007/08/29]
CheckList.py *      CheckList improvement.

[2007/08/28]
SvnSupport.py       Remove box.AddStretchSpacer invoke, replaced to StaticBoxSizer
ShellDialog.py ScriptDialog.py Entry.py
                    Fix dialog bug
mPyRun.py           Add copy and run in shell feature
Editor.py mView.py  Fix line number margin width, and find back End-of-line Marker menu
ScriptDialog.py     Script Manager can find menu name from the script content, you
                    can define it as a comment line, format is: #\s*name:(.*)$

[2007/08/27]
doc                 Change the plugin.txt, fixed bug and added some missing plugins description
svn_plugin CheckList.py
                    Add log history, select/deselect all, show unversioned files,
                    different color for different status, update Chinese translation
                    Add no files notify if where is no files need to process in 
                    'commit', 'revert' dialog
ShellWindow.py mRun.py
                    Improvement. Replace the popup menu, and add Copy Without Prompts 
                    menu item. And if the result cann't be convert to unicode, then
                    display the result as repr().